--- a/templates/index.html
+++ b/templates/index.html
@@ -128,9 +128,9 @@
     <div class="products">
         {% for product in products %}
         <div class="product">
-            <img src="{{product.name}}" alt="{{product.name}}">
-            <h3>{{product.name}}</h3>
-            <p>Price: ${{product.price}}</p>
+            <img src="{{product.Name}}" alt="{{product.Name}}">
+            <h3>{{product.Name}}</h3>
+            <p>Price: ${{product.Price}}</p>
             <button>查看詳情</button>
         </div>
         {% endfor %}
