--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
     <div class="products">
         {% for product in products %}
         <div class="product">
-            <img src="{{product.Name}}" alt="{{product.Name}}">
+            <img src="{{product.ProductImages}}" alt="{{product.Name}}">
             <h3>{{product.Name}}</h3>
             <p>Price: ${{product.Price}}</p>
             <button>查看詳情</button>
